<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="anytime_tablet_messenger_add_party_button_label">Add to Party</string>
    <string name="anytime_tablet_messenger_attachment_placeholder_xma_unavailable">This attachment is no longer available.</string>
    <string name="anytime_tablet_messenger_compose_bar_text_input_hint">Start a message...</string>
    <string name="anytime_tablet_messenger_draft_message_title">New Message</string>
    <string name="anytime_tablet_messenger_group_thread_containing_blocked_continue_btn">Continue</string>
    <string name="anytime_tablet_messenger_group_thread_containing_blocked_leave_group_btn">Leave Group</string>
    <string name="anytime_tablet_messenger_group_thread_containing_more_than_three_blocked_body">%1$s, %2$s and %3$s are in this group. If you continue, you and they will be able to call, video chat and see each other\'s messages and activity in this group.</string>
    <string name="anytime_tablet_messenger_group_thread_containing_multiple_blocked_manage_block_btn">Manage Blocked Members</string>
    <string name="anytime_tablet_messenger_group_thread_containing_one_blocked_body">You\'ve blocked %1$s. If you continue, you and %2$s will be able to call, video chat and see each other\'s messages and activity in this group.</string>
    <string name="anytime_tablet_messenger_group_thread_containing_one_blocked_manage_block_btn">Manage Block Settings</string>
    <string name="anytime_tablet_messenger_group_thread_containing_one_blocked_title">%s is in this group</string>
    <string name="anytime_tablet_messenger_group_thread_containing_three_blocked_body">%1$s, %2$s and %3$s are in this group. If you continue, you and they will be able to call, video chat and see each other\'s messages and activity in this group.</string>
    <string name="anytime_tablet_messenger_group_thread_containing_two_blocked_body">%1$s and %2$s are in this group. If you continue, you and they will be able to call, video chat and see each other\'s messages and activity in this group.</string>
    <string name="anytime_tablet_messenger_group_thread_context_menu_block">Block a Member</string>
    <string name="anytime_tablet_messenger_group_thread_context_menu_report">Report a Member</string>
    <string name="anytime_tablet_messenger_leave_chat_confirmation_body">This conversation will be archived, and you won\'t get any new messages.</string>
    <string name="anytime_tablet_messenger_leave_chat_confirmation_cancel_btn">Cancel</string>
    <string name="anytime_tablet_messenger_leave_chat_confirmation_header">Leave Chat?</string>
    <string name="anytime_tablet_messenger_leave_chat_confirmation_leave_btn">Leave</string>
    <string name="anytime_tablet_messenger_message_reactions_popup_header">Reactions</string>
    <string name="anytime_tablet_messenger_message_reactions_remaining_count">%s more</string>
    <string name="anytime_tablet_messenger_offline_button_text">Connect to Wi-Fi</string>
    <string name="anytime_tablet_messenger_offline_title">Unable to Connect to Wi-Fi</string>
    <string name="anytime_tablet_messenger_one_on_one_thread_blocked_body">You can\'t message or call them in this chat, and you won\'t receive their messages or calls.</string>
    <string name="anytime_tablet_messenger_one_on_one_thread_blocked_report_btn">Report</string>
    <string name="anytime_tablet_messenger_one_on_one_thread_blocked_unblock_btn">Unblock</string>
    <string name="anytime_tablet_messenger_one_on_one_thread_facebook_blocked_title">You\'ve Blocked %s\'s Facebook Account</string>
    <string name="anytime_tablet_messenger_one_on_one_thread_message_blocked_title">You\'ve Blocked Messages and Calls From %s\'s Facebook Account</string>
    <string name="anytime_tablet_messenger_profile_switcher_default">Facebook Profile</string>
    <string name="anytime_tablet_messenger_profile_switcher_facebook">Facebook Profile</string>
    <string name="anytime_tablet_messenger_profile_switcher_oculus">Oculus Profile</string>
    <string name="anytime_tablet_messenger_profile_switcher_sign_in">Sign In</string>
    <string name="anytime_tablet_messenger_profile_switcher_title">Your Profiles</string>
    <string name="anytime_tablet_messenger_start_party_button_label">Create Party</string>
    <string name="anytime_tablet_messenger_static_party_invite_link_subtitle">Click to Join Party</string>
    <string name="anytime_tablet_messenger_static_party_invite_link_title">Join Party</string>
    <string name="anytime_tablet_messenger_thread_compose_blocked_view_oculus_chats">Not everyone can message this person on Oculus.</string>
    <string name="anytime_tablet_messenger_thread_compose_blocked_view_vr_messenger">Not everyone can message this account.</string>
    <string name="anytime_tablet_messenger_thread_compose_view_participant_dropdown_title">Contacts</string>
    <string name="anytime_tablet_messenger_thread_compose_view_participant_dropdown_title_no_results">No matches were found for %s. Try searching for someone else.</string>
    <string name="anytime_tablet_messenger_thread_compose_view_participant_entry_hint">Type the name of a person</string>
    <string name="anytime_tablet_messenger_thread_compose_view_to">To:</string>
    <string name="anytime_tablet_messenger_thread_context_menu_block">Block</string>
    <string name="anytime_tablet_messenger_thread_context_menu_leave_chat">Leave chat</string>
    <string name="anytime_tablet_messenger_thread_context_menu_report">Report Conversation</string>
    <string name="anytime_tablet_messenger_thread_context_menu_unblock">Unblock</string>
    <string name="anytime_tablet_messenger_thread_list_null_state_body">When you chat with friends, the conversations will appear here.</string>
    <string name="anytime_tablet_messenger_thread_list_null_state_title">Send A Message</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_animated_image">GIF attachments are currently not supported.</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_audio">Audio attachments are currently not supported.</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_file">File attachments are currently not supported.</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_general">Unsupported Attachment</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_image">Image attachments are currently not supported.</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_mutliple_image">Multiple image attachments are currently not supported.</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_sticker">Sticker attachments are currently not supported.</string>
    <string name="anytime_tablet_messenger_unsupported_attachment_placeholder_video">Video attachments are currently not supported.</string>
    <string name="anytime_tablet_oc_group_thread_containing_blocked_title">Someone You\'ve Blocked is in This Group</string>
    <string name="anytime_tablet_oc_group_thread_containing_more_than_three_blocked_body">If you continue, %1$s, %2$s and %3$s will be able to see and respond to messages you send in this group chat.</string>
    <string name="anytime_tablet_oc_group_thread_containing_one_blocked_body">If you continue, %s will be able to see and respond to messages you send in this group chat.</string>
    <string name="anytime_tablet_oc_group_thread_containing_three_blocked_body">If you continue, %1$s, %2$s and %3$s will be able to see and respond to messages you send in this group chat.</string>
    <string name="anytime_tablet_oc_group_thread_containing_two_blocked_body">If you continue, %1$s and %2$s will be able to see and respond to messages you send in this group chat.</string>
    <string name="anytime_tablet_parties_party_header_title">Party</string>
    <string name="anytime_tablet_profile_share_description">See my profile on Oculus</string>
    <string name="anytime_tablet_social_active_party">Current Party (%1$d)</string>
    <string name="anytime_tablet_social_active_section_header">Suggested</string>
    <string name="anytime_tablet_social_add_friend">Add Friend</string>
    <string name="join_party_button_cancel">Cancel</string>
    <string name="join_party_button_confirm">Continue</string>
    <string name="join_party_dialog_joining_as_subtitle">People in this party will be able to see your Oculus activity independent of your Activity Setting.</string>
    <string name="join_party_title">Join Party</string>
    <string name="messenger_quick_reply_hang_out_in_vr">Hang out in VR?</string>
    <string name="messenger_quick_reply_hey">Hey!</string>
    <string name="messenger_quick_reply_start_a_party">Let\'s start a party!</string>
    <string name="messenger_quick_reply_up_for_a_game">Up for a game?</string>
    <string name="people_tablet_friend_requests_button_title">Requests</string>
    <string name="people_tablet_nearby_button_title">Nearby</string>
    <string name="people_tablet_quick_message_loading_text">Sending Message</string>
    <string name="people_tablet_quick_message_open_chat_cta">Open Chat</string>
    <string name="people_tablet_quick_message_popup_title">Send a Quick Message</string>
    <string name="people_tablet_quick_message_success_toast">Message Sent</string>
    <string name="people_tablet_suggested_button_title">Suggestions</string>
    <string name="social_settings_active_status_body">Your friends and contacts will see when you\'re active or recently active. You\'ll appear active or recently active unless you turn off the setting every place you\'re using Messenger or Facebook. You\'ll also see when your friends and contacts are active or recently active. &lt;b&gt;Learn More.&lt;/b&gt;</string>
    <string name="social_settings_active_status_description">Show when you\'re active</string>
    <string name="social_settings_active_status_header">Active Status</string>
    <string name="social_settings_messenger_account_body">You can sign out to hide Messenger chats and notifications if you share your headset with friends or family. To sign back in, select your Messenger profile and re-enter your password.</string>
    <string name="social_settings_messenger_account_header">Sign Out</string>
    <string name="social_settings_messenger_account_sign_out_button">Sign Out</string>
    <string name="start_messenger_call_button_cancel">Cancel</string>
    <string name="start_messenger_call_button_confirm">Start Call</string>
    <string name="start_messenger_call_title">Start Call</string>
</resources>