<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/container" android:tag="layout/people_quick_message_popup_0" android:background="@drawable/occontext_menu" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.oculus.ocui.OCTextView android:textStyle="bold" android:ellipsize="end" android:id="@+id/context_menu_title" android:paddingTop="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/people_tablet_quick_message_popup_title" android:scrollHorizontally="true" android:singleLine="true" android:paddingStart="16dp" android:paddingEnd="12dp" app:layout_constraintTop_toTopOf="0" style="@style/Body2"/>
    <com.google.android.flexbox.FlexboxLayout android:orientation="horizontal" android:id="@+id/quick_message_wrapper" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16dp" app:flexWrap="1" app:justifyContent="0" app:layout_constraintTop_toBottomOf="@+id/context_menu_title">
        <com.oculus.ocui.OCButton android:id="@+id/quick_message_1" android:tag="binding_1" android:background="@drawable/people_tablet_quick_message_option_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/messenger_quick_reply_hang_out_in_vr" android:maxLines="1" style="@style/Body2"/>
        <com.oculus.ocui.OCButton android:id="@+id/quick_message_2" android:tag="binding_2" android:background="@drawable/people_tablet_quick_message_option_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/messenger_quick_reply_up_for_a_game" android:maxLines="1" style="@style/Body2"/>
        <com.oculus.ocui.OCButton android:id="@+id/quick_message_3" android:tag="binding_3" android:background="@drawable/people_tablet_quick_message_option_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/messenger_quick_reply_start_a_party" android:maxLines="1" style="@style/Body2"/>
        <com.oculus.ocui.OCButton android:id="@+id/quick_message_4" android:tag="binding_4" android:background="@drawable/people_tablet_quick_message_option_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/messenger_quick_reply_hey" android:maxLines="1" style="@style/Body2"/>
    </com.google.android.flexbox.FlexboxLayout>
    <com.oculus.ocui.OCButton android:ellipsize="end" android:id="@+id/cta_button" android:tag="binding_5" android:background="@drawable/people_tablet_quick_message_cta_row_background" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginBottom="16dp" android:text="@string/people_tablet_quick_message_open_chat_cta" android:maxLines="1" android:paddingStart="12dp" android:paddingEnd="12dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/quick_message_wrapper"/>
    <com.oculus.ocui.OCTextView android:gravity="center" android:id="@+id/success_text" android:tag="binding_6" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginBottom="16dp" android:text="@string/people_tablet_quick_message_success_toast" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/quick_message_wrapper" style="@style/Body1"/>
    <View android:id="@+id/loading_container" android:tag="binding_7" android:background="@drawable/people_tablet_quick_message_cta_row_background" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginBottom="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/quick_message_wrapper"/>
    <com.oculus.ocui.OCSpinner android:id="@+id/cta_loading_spinner" android:tag="binding_8" android:layout_width="24dp" android:layout_height="24dp" app:layout_constraintBottom_toBottomOf="@+id/loading_container" app:layout_constraintEnd_toStartOf="@+id/loading_text" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/loading_container"/>
    <com.oculus.ocui.OCTextView android:id="@+id/loading_text" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/people_tablet_quick_message_loading_text" android:layout_marginStart="12dp" app:layout_constraintBottom_toBottomOf="@+id/loading_container" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintStart_toEndOf="@+id/cta_loading_spinner" app:layout_constraintTop_toTopOf="@+id/loading_container" style="@style/Body1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
