<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/leave_chat_confirmation" android:tag="layout/anytime_tablet_messenger_leave_chat_confirmation_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.oculus.ocui.OCTextView android:textStyle="bold" android:gravity="center" android:id="@+id/leave_chat_confirmation_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="94dp" android:layout_marginBottom="114dp" android:text="@string/anytime_tablet_messenger_leave_chat_confirmation_header" app:layout_constraintBottom_toTopOf="@+id/bottom_button_guideline" app:layout_constraintTop_toTopOf="0" style="@style/H2"/>
    <com.oculus.ocui.OCTextView android:textColor="?attr/ocSecondaryText" android:gravity="center" android:id="@+id/leave_chat_confirmation_body" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/anytime_tablet_messenger_leave_chat_confirmation_body" app:layout_constraintTop_toBottomOf="@+id/leave_chat_confirmation_header" style="@style/Body2"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/bottom_button_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="52dp"/>
    <com.oculus.ocui.OCButton android:id="@+id/cancel_leave_chat_btn" android:layout_width="0dp" android:layout_height="@dimen/anytime_tablet_common_rectangular_button_height_v2" android:layout_marginBottom="@dimen/messenger_reactions_pill_radius" android:text="@string/anytime_tablet_messenger_leave_chat_confirmation_cancel_btn" android:layout_marginStart="@dimen/abc_button_padding_horizontal_material" android:layout_marginEnd="@dimen/abc_button_padding_horizontal_material" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/confirm_leave_chat_btn" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/bottom_button_guideline"/>
    <com.oculus.ocui.OCButton android:id="@+id/confirm_leave_chat_btn" android:layout_width="0dp" android:layout_height="@dimen/anytime_tablet_common_rectangular_button_height_v2" android:layout_marginBottom="@dimen/messenger_reactions_pill_radius" android:text="@string/anytime_tablet_messenger_leave_chat_confirmation_leave_btn" android:layout_marginEnd="@dimen/abc_button_padding_horizontal_material" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/cancel_leave_chat_btn" app:layout_constraintTop_toBottomOf="@+id/bottom_button_guideline"/>
</androidx.constraintlayout.widget.ConstraintLayout>
