<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/people_nav_bar" android:tag="layout/people_nav_bar_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.oculus.ocui.OCButton android:id="@+id/friends_button" android:tag="binding_1" android:background="@drawable/people_nav_button_background" android:layout_width="wrap_content" android:layout_height="@dimen/messenger_tablet_message_bubble_profile_picture_diameter" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.oculus.ocui.OCButton android:id="@+id/people_nearby_button" android:background="@drawable/people_nav_button_background" android:layout_width="wrap_content" android:layout_height="@dimen/messenger_tablet_message_bubble_profile_picture_diameter" android:text="@string/people_tablet_nearby_button_title" android:layout_marginStart="@dimen/abc_button_padding_horizontal_material" app:layout_constraintStart_toEndOf="@+id/friends_button" app:layout_constraintTop_toTopOf="0"/>
    <com.oculus.ocui.OCButton android:id="@+id/suggested_button" android:background="@drawable/people_nav_button_background" android:layout_width="wrap_content" android:layout_height="@dimen/messenger_tablet_message_bubble_profile_picture_diameter" android:text="@string/people_tablet_suggested_button_title" android:layout_marginStart="@dimen/abc_button_padding_horizontal_material" app:layout_constraintStart_toEndOf="@+id/people_nearby_button" app:layout_constraintTop_toTopOf="0"/>
    <com.oculus.ocui.OCButton android:id="@+id/friend_requests_button" android:background="@drawable/people_nav_button_background" android:layout_width="wrap_content" android:layout_height="@dimen/messenger_tablet_message_bubble_profile_picture_diameter" android:text="@string/people_tablet_friend_requests_button_title" android:layout_marginStart="@dimen/abc_button_padding_horizontal_material" app:layout_constraintStart_toEndOf="@+id/suggested_button" app:layout_constraintTop_toTopOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
