<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/social_settings_active_status_0" android:background="@drawable/anytime_tablet_background_v2" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <com.oculus.ocui.OCTextView android:id="@+id/active_status_header" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/social_settings_active_status_header" android:fontFamily="roboto" android:layout_marginStart="@dimen/abc_floating_window_z" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Body1"/>
    <com.oculus.ocui.OCTextView android:id="@+id/active_status_description" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="76dp" android:text="@string/social_settings_active_status_description" android:fontFamily="roboto" android:layout_marginStart="@dimen/abc_floating_window_z" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Body1"/>
    <com.oculus.ocui.OCLink android:textColor="?attr/ocSecondaryText" android:id="@+id/active_status_body" android:tag="binding_3" android:layout_width="@dimen/social_settings_body_width" android:layout_height="wrap_content" android:layout_marginTop="96dp" android:text="@string/social_settings_active_status_body" android:fontFamily="roboto" android:layout_marginStart="@dimen/abc_floating_window_z" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Body2"/>
    <com.oculus.ocui.OCSpinner android:id="@+id/active_status_loading_spinner" android:tag="binding_4" android:layout_width="28dp" android:layout_height="28dp" android:layout_marginTop="156dp" android:layout_marginStart="230dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <RelativeLayout android:id="@+id/active_status_toggle_view" android:tag="binding_5" android:layout_width="48dp" android:layout_height="36dp" android:layout_marginTop="106dp" android:layout_marginStart="424dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <com.oculus.ocui.OCToggle android:id="@+id/active_status_toggle" android:tag="binding_6" android:layout_width="48dp" android:layout_height="24dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
