<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.socialandroidbackpanel.views.start_messenger_call.StartMessengerCallView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/start_messenger_call" android:tag="layout/start_messenger_call_view_0" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.oculus.ocui.OCTextView android:textStyle="bold" android:id="@+id/start_messenger_call_title" android:layout_width="wrap_content" android:layout_height="200dp" android:layout_marginTop="32dp" android:layout_marginBottom="32dp" android:text="@string/start_messenger_call_title" android:maxLines="1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/H2"/>
    <com.oculus.ocui.OCButton android:id="@+id/start_messenger_call_secondary_button" android:paddingLeft="20dp" android:paddingTop="8dp" android:paddingRight="20dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginTop="@dimen/abc_dropdownitem_icon_width" android:layout_marginBottom="@dimen/abc_dropdownitem_icon_width" android:minHeight="40dp" android:text="@string/start_messenger_call_button_cancel" android:layout_weight="1" android:layout_marginStart="@dimen/abc_dropdownitem_icon_width" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/start_messenger_call_primary_button" style="@style/Body1"/>
    <com.oculus.ocui.OCButton android:id="@+id/start_messenger_call_primary_button" android:background="@drawable/ocbutton_primary" android:paddingLeft="20dp" android:paddingTop="8dp" android:paddingRight="20dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginTop="@dimen/abc_dropdownitem_icon_width" android:layout_marginBottom="@dimen/abc_dropdownitem_icon_width" android:minHeight="40dp" android:text="@string/start_messenger_call_button_confirm" android:layout_weight="1" android:layout_marginStart="@dimen/abc_button_padding_horizontal_material" android:layout_marginEnd="@dimen/abc_dropdownitem_icon_width" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/start_messenger_call_secondary_button" app:layout_constraintRight_toRightOf="0" style="@style/Body1"/>
</com.oculus.panelapp.socialandroidbackpanel.views.start_messenger_call.StartMessengerCallView>
