<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/social_settings_messenger_account_0" android:background="@drawable/anytime_tablet_background_v2" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.oculus.ocui.OCTextView android:gravity="center_vertical" android:id="@+id/messenger_account_header" android:layout_width="wrap_content" android:layout_height="64dp" android:text="@string/social_settings_messenger_account_header" android:layout_marginStart="@dimen/abc_floating_window_z" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Body1"/>
    <com.oculus.ocui.OCTextView android:textColor="?attr/ocSecondaryText" android:id="@+id/messenger_account_body" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/social_settings_messenger_account_body" android:layout_marginStart="@dimen/abc_floating_window_z" android:layout_marginEnd="@dimen/abc_floating_window_z" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/messenger_account_header" style="@style/Body2"/>
    <ImageView android:id="@+id/messenger_account_profile_picture" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginTop="24dp" android:src="@drawable/oc_icon_profile_circle_filled_48_d2d2d2" android:layout_marginStart="@dimen/abc_floating_window_z" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/messenger_account_body"/>
    <com.oculus.ocui.OCButton android:id="@+id/messenger_account_sign_out_button" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="@dimen/anytime_tablet_common_rectangular_button_height_v2" android:text="@string/social_settings_messenger_account_sign_out_button" android:layout_marginEnd="@dimen/abc_floating_window_z" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/messenger_account_profile_picture"/>
    <com.oculus.ocui.OCTextView android:id="@+id/messenger_account_profile_name" android:tag="binding_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/messenger_account_profile_picture" app:layout_constraintEnd_toStartOf="@+id/messenger_account_sign_out_button" app:layout_constraintStart_toEndOf="@+id/messenger_account_profile_picture" app:layout_constraintTop_toTopOf="@+id/messenger_account_profile_picture" style="@style/Body1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
