<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.socialandroidbackpanel.views.join_party.JoinPartyView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/join_party" android:tag="layout/join_party_view_0" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.oculus.ocui.OCTextView android:textStyle="bold" android:id="@+id/join_party_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginBottom="32dp" android:text="@string/join_party_title" android:maxLines="1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/H2"/>
    <com.oculus.panelapp.socialandroidbackpanel.views.list_item.ListItem android:id="@+id/join_party_joining_as_row" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:layout_marginBottom="6dp" android:layout_marginStart="@dimen/abc_dropdownitem_icon_width" android:layout_marginEnd="@dimen/abc_dropdownitem_icon_width" app:image="@drawable/oc_icon_profile_circle_filled_48_d2d2d2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/join_party_title" app:subtitle="@string/join_party_dialog_joining_as_subtitle"/>
    <com.oculus.panelapp.socialandroidbackpanel.views.list_item.ListItem android:id="@+id/join_party_destination_row" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" android:minHeight="64dp" android:layout_marginStart="@dimen/abc_dropdownitem_icon_width" android:layout_marginEnd="@dimen/abc_dropdownitem_icon_width" app:image="@drawable/oc_icon_destination_filled_24_d2d2d2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/join_party_joining_as_row"/>
    <com.oculus.panelapp.socialandroidbackpanel.views.list_item.ListItem android:id="@+id/join_party_party_description_row" android:tag="binding_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" android:minHeight="64dp" android:layout_marginStart="@dimen/abc_dropdownitem_icon_width" android:layout_marginEnd="@dimen/abc_dropdownitem_icon_width" app:alt_subtitle_icon="@drawable/oc_icon_friends_block_filled_24_d2d2d2" app:alt_text_color="@color/icon_negative" app:image="@drawable/oc_icon_profile_filled_24_d2d2d2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/join_party_destination_row"/>
    <com.oculus.ocui.OCButton android:id="@+id/join_party_secondary_button" android:paddingLeft="20dp" android:paddingTop="8dp" android:paddingRight="20dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginTop="@dimen/abc_dropdownitem_icon_width" android:layout_marginBottom="@dimen/abc_dropdownitem_icon_width" android:minHeight="40dp" android:text="@string/join_party_button_cancel" android:layout_weight="1" android:layout_marginStart="@dimen/abc_dropdownitem_icon_width" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/join_party_primary_button" app:layout_constraintTop_toBottomOf="@+id/join_party_party_description_row" style="@style/Body1"/>
    <com.oculus.ocui.OCButton android:id="@+id/join_party_primary_button" android:background="@drawable/ocbutton_primary" android:paddingLeft="20dp" android:paddingTop="8dp" android:paddingRight="20dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginTop="@dimen/abc_dropdownitem_icon_width" android:layout_marginBottom="@dimen/abc_dropdownitem_icon_width" android:minHeight="40dp" android:text="@string/join_party_button_confirm" android:layout_weight="1" android:layout_marginStart="@dimen/abc_button_padding_horizontal_material" android:layout_marginEnd="@dimen/abc_dropdownitem_icon_width" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintHorizontal_weight="1" app:layout_constraintLeft_toRightOf="@+id/join_party_secondary_button" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/join_party_party_description_row" style="@style/Body1"/>
</com.oculus.panelapp.socialandroidbackpanel.views.join_party.JoinPartyView>
